--- a/parralexeffect.html
+++ b/parralexeffect.html
@@ -34,6 +34,12 @@
         <div>this is parrallex effect baby</div>
       </div>  
      </section>
+     <section class="section-4">
+      <div>
+        <h2>this is new added section 4</h2>
+        <div>this is parrallex effect baby</div>
+      </div>  
+     </section>
 
 
 
