--- a/parralexeffect.html
+++ b/parralexeffect.html
@@ -40,6 +40,12 @@
         <div>this is parrallex effect baby</div>
       </div>  
      </section>
+     <section class="section-4">
+      <div>
+        <h2>this is new added section 4 for checkin conflitct</h2>
+        <div>this is parrallex effect baby</div>
+      </div>  
+     </section>
 
 
 
