--- a/parralexeffect.html
+++ b/parralexeffect.html
@@ -46,7 +46,13 @@
         <div>this is parrallex effect baby section this required</div>
       </div>  
      </section>
-
+     <section class="section-4">
+      <div>
+        <h2> this need to delete </h2>
+        <div>this is reset parrallex effect baby section this required</div>
+      </div>  
+     </section>
+    
 
 
    <style>
