--- a/parralexeffect.html
+++ b/parralexeffect.html
@@ -52,6 +52,12 @@
         <div>this is reset parrallex effect baby section this required</div>
       </div>  
      </section>
+     <section class="section-4">
+      <div>
+        <h2> new feauture 2 </h2>
+        <div>this is reset parrallex effect baby section this required</div>
+      </div>  
+     </section>
     
 
 
