small changes in file

--- a/parralexeffect.html
+++ b/parralexeffect.html
@@ -6,85 +6,106 @@
     <title>Document</title>
   </head>
   <body>
-    
-     <section>
+    <section class="section-1">
       <div>
         <h2>this is section 1</h2>
         <div>this is parrallex effect baby</div>
-      </div>  
-     </section>
+      </div>
+    </section>
 
-     <section class="section-2">
+    <section class="section-2">
       <div>
         <h2>this is section 2</h2>
         <div>this is parrallex effect baby</div>
-      </div>  
-     </section>
+      </div>
+    </section>
 
-     <section class="section-3">
+    <section class="section-3">
       <div>
         <h2>this is section 3</h2>
         <div>this is parrallex effect baby</div>
-      </div>  
-     </section>
+      </div>
+    </section>
 
-     <section class="section-4">
+    <section class="section-4">
       <div>
         <h2>this is section 4</h2>
         <div>this is parrallex effect baby</div>
-      </div>  
-     </section>
-     <section class="section-4">
+      </div>
+    </section>
+    <section class="section-4">
       <div>
         <h2>this is new added section 4</h2>
         <div>this is parrallex effect baby</div>
-      </div>  
-     </section>
-     <section class="section-4">
+      </div>
+    </section>
+    <section class="section-4">
       <div>
-        <h2>this is new added section 4 totally new </h2>
+        <h2>this is new added section 4 totally new g</h2>
         <div>this is parrallex effect baby section this required</div>
-      </div>  
-     </section>
+      </div>
+    </section>
+    <section class="section-4">
+      <div>
+        <h2>this need to delete</h2>
+        <div>this is reset parrallex effect baby section this required</div>
+      </div>
+    </section>
+    <section class="section-4">
+      <div>
+        <h2>new feauture 2</h2>
+        <div>this is reset parrallex effect baby section this required</div>
+      </div>
+    </section>
+    <section class="section-4">
+      <div>
+        <h2>new feauture 3</h2>
+        <div>this is reset parrallex effect baby section this required</div>
+      </div>
+    </section>
+    <section class="section-4">
+      <div>
+        <h2>new feauture 4</h2>
+        <div>this is reset parrallex effect baby section this required</div>
+      </div>
+    </section>
 
+    <style>
+      *{
+        margin: 0;
+        padding: 0;
+        font-family: 'Courier New', Courier, monospace;
+      }
 
+      .section-1{
+        width: 100%;;
+        height: 100vh;
+        background-image: url("img1.jpg");
+        background-size: 100% 100%;
+        background-attachment: fixed;
+      }
 
-   <style>
-  *{
-    margin: 0;
-    padding: 0;
-    font-family: 'Courier New', Courier, monospace;
-  }
-
-  section{
-    width: 100%;;
-    height: 100vh;
-    background-image: url("img1.jpg");
-    background-size: 100% 100%;
-    background-attachment: fixed;
-  }
-
-  .section-2{
-    width: 100%;;
-    height: 100vh;
-    background-image: url("img2.jpg");
-    background-size: 100% 100%;
-    background-attachment: fixed;
-  }
-  .section-3{
-    width: 100%;;
-    height: 100vh;
-    background-image: url("img3.jpg");
-    background-size: 100% 100%;
-    background-attachment: fixed;
-  }
-  .section-4{
-    width: 100%;;
-    height: 100vh;
-    background-image: url("img4.jpg");
-    background-size: 100% 100%;
-    background-attachment: fixed;
-  }
-   </style>
+      .section-2{
+        width: 100%;;
+        height: 100vh;
+        background-image: url("img2.jpg");
+        background-size: 100% 100%;
+        background-attachment: fixed;
+      }
+      .section-3{
+        width: 100%;;
+        height: 100vh;
+        background-image: url("img3.jpg");
+        background-size: 100% 100%;
+        background-attachment: fixed;
+      }
+      .section-4{
+        width: 100%;;
+        height: 100vh;
+        background-image: url("img4.jpg");
+        background-size: 100% 100%;
+        background-attachment: fixed;
+      }
+    </style>
   </body>
 </html>
